<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnightblue"
    tools:context="com.firesoul.formulario.Formulario"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        >
        <!--nombre -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="12"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tNombre"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/eNombre"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <!--pass -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="12"
            android:orientation="vertical">

           >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tPassword"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/ePassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <!--Confirm_pass -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="12"
            android:orientation="vertical">

            <!--Seleccione una figura -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tConfirmpass"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/eCPassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <!--Email -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="12"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tEmail"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/eEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <!--se usa margin top y se colocan las opciones -->
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:checked="false"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Mujer"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Hombre"
                android:textColor="@color/black"
                android:textSize="12sp" />
            />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.8"
                android:text="@string/S"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fecha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@color/darkblue"
                android:focusable="false"
                android:layout_marginRight="10dp"
                android:hint="   Dia/Mes/Año"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/L"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@color/snow"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/aikido" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/natacion" />


                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/dibujar" />

                <CheckBox
                    android:id="@+id/checkbox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/gimnasia" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="8">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/darkblue"
            android:onClick="onButtonClicked"
            android:text="@string/Aceptar"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/EditText5"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="5"
                android:enabled="false"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic|bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
